# Glass-IDE

./: .gitignore  Cargo.toml  biome.json  package.json
.github/workflows/: ci.yml  release.yml
.windsurf/rules/: glass-ide-rules.md
docs/: plan.todo
frontend/: package.json  tailwind.config.cjs  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vite.extra.ts
frontend/src/: App.css  App.tsx  AppLayout.tsx  index.css  main.tsx
frontend/src/app/database/: DatabasePane.tsx
frontend/src/app/deployment/: DeploymentPane.tsx
frontend/src/app/docs/: DocsPane.tsx
frontend/src/app/editor/: ChatPane.tsx  EditorPane.tsx  ExplorerPane.tsx
frontend/src/app/home/: HomePane.tsx
frontend/src/app/marketplace/: MarketplacePane.tsx
frontend/src/app/organization/: OrganizationPane.tsx
frontend/src/app/settings/: SettingsPane.tsx
frontend/src/app/teams/: TeamsPane.tsx
frontend/src/app/versionControl/: VersionControlPane.tsx
frontend/src/components/common/: ErrorBoundary.tsx  SkeletonPane.tsx
frontend/src/components/controls/: WindowControls.tsx
frontend/src/components/editor/: EditorArea.tsx  EditorTab.tsx  EditorTabs.tsx  tabStore.ts
frontend/src/components/layout/: DynamicLayout.tsx  MainContainer.tsx
frontend/src/components/navigation/: SideNavigationPane.tsx  TopNavigationPane.tsx
frontend/src/components/settings/: SettingsPane.tsx
frontend/src/components/ui/: Card.tsx
frontend/src/contexts/: UISettingsContext.tsx  ViewContext.tsx
frontend/src/features/editor/: CodeEditor.tsx
frontend/src/features/search/: SearchBar.tsx
frontend/src/hooks/: useFileTree.ts  useIncrementalFileTree.ts  useOptimizedHandlers.ts  usePrefetch.ts  useSettingsToggle.tsx
frontend/src/lib/: useMarkdownHtml.ts
frontend/src/types/: hotkeys-js.d.ts  monaco-internals.d.ts  vite-plugin-purge-icons.d.ts
frontend/src/workers/: codecWorker.ts
scripts/: bump-version.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  menu.rs
src-tauri/src/commands/: content_indexer.rs  fs.rs  indexer.rs  logger.rs  mod.rs  system.rs
src-tauri/src/lsp/: mod.rs
src-tauri/src/menu/: mod.rs
src-tauri/src/menu/layout/: mac.rs  mod.rs  windows.rs
(+69 files in other folders)
