[package]
name = "app"
version = "0.0.14"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
anyhow = "1.0"
tauri = { version = "2.5.0", features = ["macos-private-api"] }
tauri-plugin-log = "2.0.0-rc"
window-vibrancy = "0.6.0"
walkdir = "2.4"
notify = "6.1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
dirs-next = "2.0"
once_cell = "1.19"
tauri-plugin-dialog = "2"
rayon = "1.10"
fuzzy-matcher = "0.3"

[profile.release]
lto = "thin"
codegen-units = 1
